--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 
 <head>
-
 	<meta charset="utf-8">
 
 	<title>FEWD - Fun With Forms</title>
@@ -11,11 +10,9 @@
 	<meta name="author" content="Richard Enlow" />
 
 	<link rel="stylesheet" href="_/css/style.css" />
-
 </head>
 
 <body>
-
 
     <main>
         <header>
@@ -25,53 +22,51 @@
         <form>
           <div class="contact">
             <h2>Your Contact Info</h2>
-            <label for="#">Your Name</label>
+            <label>Your Name</label>
             <div class="block">
-              <input type="text" id="#" placeholder="First Name" name="first_name">
-              <input type="text" id="#" placeholder="Last Name" name="last_name">
+              <input type="text" id="first_name" placeholder="First Name" name="first_name">
+              <input type="text" id="last_name" placeholder="Last Name" name="last_name">
             </div>
 
-            <label for="#">Phone Number</label>
+            <label>Phone Number</label>
             <div class="number block">
-              <input type="text" id="#" name="area_code"> -
-              <input type="text" id="#" name="prefix"> -
-              <input type="text" id="#" name="number">
+              <input type="text" id="area_code" name="area_code"> -
+              <input type="text" id="prefix" name="prefix"> -
+              <input type="text" id="number" name="number">
             </div>
 
-            <label for="#">Address</label>
-            <div class="block">
-              <input type="text" id="#" placeholder="Street Address" name="first_name">
-              <input type="text" id="#" placeholder="Address Line 2" name="first_name">
-            </div>
+            <label>Address</label>
+              <input type="text" class="block address" id="address1" placeholder="Street Address" name="address1">
+              <input type="text" class="block address" id="address2" placeholder="Address Line 2" name="address2">
             <div class="push block">
-              <input type="text" id="#" placeholder="City" name="first_name">
-              <input type="text" id="#" placeholder="State" name="first_name">
-              <input type="text" id="areacode" placeholder="Postal Code" name="first_name">
+              <input type="text" id="city" placeholder="City" name="city">
+              <input type="text" id="state" placeholder="State" name="state">
+              <input type="text" id="areacode" placeholder="Postal Code" name="area code">
           </div>
 
           <div class="skills">
             <h2>Skills & Interests</h2>
-            <label for="#">Course</label>
+            <label>Course</label>
             <select class="block">
               <option value="none">Select One</option>
               <optgroup label="Web Development">
-                <option value="xxxx">Front-End</option>
-                <option value="xxxx">Back-End</option>
+                <option value="front-end">Front-End</option>
+                <option value="back-end">Back-End</option>
               </optgroup>
               <optgroup label="Design">
-                <option value="xxxx">Visual Design</option>
-                <option value="xxxx">User Experience</option>
+                <option value="visual-design">Visual Design</option>
+                <option value="ux">User Experience</option>
               </optgroup>
             </select>
 
-            <label for="#">Past Experience</label>
+            <label>Past Experience</label>
             <textarea class="block">
             </textarea>
           </div>
 
           <div class="else">
             <h2>Anything Else?</h2>
-            <label for="#">Referral</label>
+            <label>Referral</label>
             <select class="block">
               <option value="none">None</option>
               <option value="friend">Friend</option>
@@ -80,10 +75,11 @@
             </select>
 
 
-            <label for="#">Comments</label>
+            <label>Comments</label>
             <textarea class="block"></textarea>
           </div>
-          <button type="button">Save Draft</button> <button type="button">Submit</button>
+          <button type="button">Save Draft</button>
+          <button type="button">Submit</button>
         </form>
     </main>
 
